--- a/web/Properties/launchSettings.json
+++ b/web/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "web": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7087;http://localhost:5091",
       "environmentVariables": {
